Simplify CMake build configuration and logging
- Simplified CMake message after PDAL find_package call
- Removed build type suffix from CMake build directory
- Removed debug postfix variable argument from CMake project generation call

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,14 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# Install to the build directory
+set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}" CACHE STRING "CMake install prefix" FORCE)
+
+# Use "d" suffix for debug builds
+# Do not use a suffix for RelWithDebInfo
+set(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "CMake debug suffix")
+set(CMAKE_RELWITHDEBINFO_POSTFIX "" CACHE STRING "CMake RelWithDebInfo suffix")
+
 include_directories("${CMAKE_SOURCE_DIR}/source")
 add_subdirectory("source/pdal/capi")
 
