Add method to access a pipeline's point views

--- a/source/pdal/capi/CMakeLists.txt
+++ b/source/pdal/capi/CMakeLists.txt
@@ -5,12 +5,14 @@ message(STATUS "Found PDAL ${PDAL_VERSION}")
 
 set(SOURCES
 	Pipeline.cpp
+	PointViewCollection.cpp
 )
 
 set(HEADERS
 	Defines.h
 	Forward.h
 	Pipeline.h
+	PointViewCollection.h
 )
 
 set(DEPENDENCIES
