Add Visual Studio 2017 build to VS Code task config

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,58 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "label": "pdalc-vc15-release",
+            "type": "shell",
+            "windows": {
+                "command": "${workspaceFolder}\\make.bat"
+            },
+            "options": {
+                "env": {
+                    "BUILD_TYPE": "Release",
+                    "COMPILER_ID": "vc.15",
+                    "OSGEO4W_ROOT": "C:\\OSGeo4W64",
+                    "GENERATOR": "Visual Studio 15 2017 Win64",
+                }
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "problemMatcher": [
+                "$msCompile"
+            ]            
+        },
+        {
+            "label": "pdalc-vc15-debug",
+            "type": "shell",
+            "windows": {
+                "command": "${workspaceFolder}\\make.bat"
+            },
+            "options": {
+                "env": {
+                    "BUILD_TYPE": "Debug",
+                    "COMPILER_ID": "vc.15",
+                    "OSGEO4W_ROOT": "C:\\OSGeo4W64",
+                    "GENERATOR": "Visual Studio 15 2017 Win64",
+                }
+            },
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "reveal": "always",
+                "panel": "new"
+            },
+            "problemMatcher": [
+                "$msCompile"
+            ]
+        },
+        {
             "label": "pdalc-vc14-release",
             "type": "shell",
             "windows": {
