Add "d" filename postfix to debug build test_pdal_c executable

--- a/tests/pdal/capi/CMakeLists.txt
+++ b/tests/pdal/capi/CMakeLists.txt
@@ -13,6 +13,8 @@ set(DEPENDENCIES pdal_c)
 include_directories(${CMAKE_SOURCE_DIR}/source)
 
 add_executable(${TARGET} ${SOURCES} ${HEADERS})
+set_target_properties(${TARGET} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
+
 target_link_libraries(${TARGET} ${DEPENDENCIES})
 add_test(NAME ${TARGET} COMMAND ${TARGET})
 
