Load test pipeline from repository file from path inserted by CMake

--- a/tests/pdal/capi/CMakeLists.txt
+++ b/tests/pdal/capi/CMakeLists.txt
@@ -1,5 +1,8 @@
 set(TARGET test_pdal_c)
 
+configure_file(PipelineTest.c.in ${CMAKE_CURRENT_SOURCE_DIR}/PipelineTest.c)
+configure_file(PointViewCollectionTest.c.in ${CMAKE_CURRENT_SOURCE_DIR}/PointViewCollectionTest.c)
+
 set(SOURCES
 	main.c
 	PipelineTest.c
