--- a/tests/data/stats.json.in
+++ b/tests/data/stats.json.in
@@ -1,9 +1,9 @@
 {
   "pipeline":[
-    "@CMAKE_SOURCE_DIR@/test/data/las/1.2-with-color.las",
+    "@CMAKE_SOURCE_DIR@/tests/data/las/1.2-with-color.las",
     {
       "type":"filters.stats"
     },
-    "@CMAKE_SOURCE_DIR@/test/temp/pdal-stats.las"
+    "@CMAKE_SOURCE_DIR@/tests/pdal-stats.las"
   ]
 }
