Add PointView support to C API

--- a/source/pdal/capi/CMakeLists.txt
+++ b/source/pdal/capi/CMakeLists.txt
@@ -5,6 +5,7 @@ message(STATUS "Found PDAL ${PDAL_VERSION}")
 
 set(SOURCES
 	Pipeline.cpp
+	PointView.cpp
 	PointViewCollection.cpp
 )
 
@@ -12,6 +13,7 @@ set(HEADERS
 	Defines.h
 	Forward.h
 	Pipeline.h
+	PointView.h
 	PointViewCollection.h
 )
 
