Add PointView tests

--- a/tests/pdal/capi/CMakeLists.txt
+++ b/tests/pdal/capi/CMakeLists.txt
@@ -1,13 +1,23 @@
 set(TARGET test_pdal_c)
 
 configure_file(PipelineTest.c.in ${CMAKE_CURRENT_SOURCE_DIR}/PipelineTest.c)
+configure_file(PointViewTest.c.in ${CMAKE_CURRENT_SOURCE_DIR}/PointViewTest.c)
 configure_file(PointViewCollectionTest.c.in ${CMAKE_CURRENT_SOURCE_DIR}/PointViewCollectionTest.c)
+
+set(CONFIG
+	PipelineTest.c.in
+	PointViewCollectionTest.c.in
+	PointViewTest.c.in
+)
+
+source_group("Config Files" FILES ${CONFIG})
 
 set(SOURCES
 	main.c
 	PipelineTest.c
 	PointViewCollectionTest.c
-	)
+	PointViewTest.c
+)
 
 set(HEADERS )
 
@@ -15,7 +25,7 @@ set(DEPENDENCIES pdal_c)
 
 include_directories(${CMAKE_SOURCE_DIR}/source)
 
-add_executable(${TARGET} ${SOURCES} ${HEADERS})
+add_executable(${TARGET} ${SOURCES} ${HEADERS} ${CONFIG})
 set_target_properties(${TARGET} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
 
 target_link_libraries(${TARGET} ${DEPENDENCIES})
