--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,6 @@
     - cd "%CI_PROJECT_DIR%/build/%TARGET_PLATFORM%"
     - cmake "%CI_PROJECT_DIR%" -DCMAKE_BUILD_TYPE=%BUILD_TYPE% -DCMAKE_TOOLCHAIN_FILE=%TOOLCHAIN% -DVCPKG_TARGET_TRIPLET=%TRIPLET% -DCMAKE_GENERATOR_PLATFORM=%ARCH%
     - cmake --build . --target INSTALL --config %BUILD_TYPE%
-
   cache:
     untracked: true
     policy: push
@@ -31,7 +30,8 @@ build-x64-windows-release:
   cache:
     key: build-x64-windows-release
     paths:
-      - build/
+      - build/build-x64-windows-release/bin/
+      - build/build-x64-windows-release/data/
 
 build-x64-windows-debug:
   <<: *build-windows
@@ -45,7 +45,8 @@ build-x64-windows-debug:
   cache:
     key: build-x64-windows-debug
     paths:
-      - build/
+      - build/build-x64-windows-debug/bin/
+      - build/build-x64-windows-debug/data/
 
 #--------------------------
 # Linux Builds (via Docker)
@@ -62,6 +63,7 @@ build-x64-windows-debug:
     - cd "$CI_PROJECT_DIR/build/$TARGET_PLATFORM"
     - cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=$BUILD_TYPE "$CI_PROJECT_DIR"
     - make
+    - make install
   variables:
     GIT_STRATEGY: clone
   cache:
@@ -69,7 +71,8 @@ build-x64-windows-debug:
     key: "$CI_JOB_NAME"
     policy: push
     paths:
-      - build/$CI_JOB_NAME/
+      - build/$CI_JOB_NAME/bin/
+      - build/$CI_JOB_NAME/data/
   artifacts:
     untracked: true
     expire_in: 1 week
