--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -117,10 +117,14 @@ test-x64-windows-debug:
     policy: push
     paths:
       - build/$CI_JOB_NAME/bin/
+      - build/$CI_JOB_NAME/lib/
       - build/$CI_JOB_NAME/data/
   artifacts:
     untracked: true
     expire_in: 1 week
+    paths:
+      - build/$CI_JOB_NAME/lib/
+      - build/$CI_JOB_NAME/include/*.h
 
 .build-x64-linux-release:
   <<: *build-linux
