--- a/source/pdal/capi/CMakeLists.txt
+++ b/source/pdal/capi/CMakeLists.txt
@@ -42,7 +42,7 @@ set_target_properties(${TARGET} PROPERTIES
 )
 
 # Measure code coverage on gcc
-if(CMAKE_COMPILER_IS_GNUCXX)
+if(CMAKE_COMPILER_IS_GNUCXX AND PDALC_ENABLE_CODE_COVERAGE)
 	SETUP_TARGET_FOR_COVERAGE(
 		NAME coverage_${TARGET}
 		EXECUTABLE test_${TARGET}
