Replace Linux build Docker image with pdal tag in GitLab CI configuration
The `pdal` tag is used to invoke a GitLab runner that directly uses the simverge/pdalc-build-deps Docker image.
The previous configuration used a GitLab runner that used the centos image and used the simverge/pdalc-build-deps within it.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,7 +99,6 @@ test-x64-windows-debug:
 #
 .job_template: &build-linux
   stage: build
-  image: simverge/pdalc-build-deps
   script:
     - export TARGET_PLATFORM=$CI_JOB_NAME
     - echo "Building $CI_PROJECT_NAME ($CI_COMMIT_REF_NAME branch) for $TARGET_PLATFORM"
@@ -130,6 +129,7 @@ build-x64-linux-release:
   <<: *build-linux
   tags:
     - linux
+    - pdal
     - docker
     - release
   before_script:
@@ -139,6 +139,7 @@ build-x64-linux-release:
   <<: *build-linux
   tags:
     - linux
+    - pdal
     - docker
     - debug
   before_script:
