--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,8 +105,8 @@ test-x64-windows-debug:
     - rm -rf "$CI_PROJECT_DIR/build/$TARGET_PLATFORM" 
     - mkdir -p "$CI_PROJECT_DIR/build/$TARGET_PLATFORM"
     - cd "$CI_PROJECT_DIR/build/$TARGET_PLATFORM"
-    - cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DPDALC_ENABLE_CODE_COVERAGE=OFF "$CI_PROJECT_DIR"
-    - make -j1
+    - cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=$BUILD_TYPE -DPDALC_ENABLE_CODE_COVERAGE=OFF -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -DCMAKE_RULE_MESSAGES:BOOL=OFF "$CI_PROJECT_DIR"
+    - make -j1 --no-print-directory
     - make install
   variables:
     GIT_STRATEGY: clone
