--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,23 +125,25 @@ test-x64-windows-debug:
       - build/$CI_JOB_NAME/lib/
       - build/$CI_JOB_NAME/include/*.h
 
-build-x64-linux-release:
+build-x64-linux-release-ubuntu:
   <<: *build-linux
   tags:
     - linux
     - pdal
     - docker
     - release
+    - ubuntu
   before_script:
     - export BUILD_TYPE=Release
 
-.build-x64-linux-debug:
+.build-x64-linux-debug-ubuntu:
   <<: *build-linux
   tags:
     - linux
     - pdal
     - docker
     - debug
+    - ubuntu
   before_script:
     - export BUILD_TYPE=Debug
 
