Copy proj DLL to expected name for Windows GitLab Ci tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,7 @@ test-x64-windows-release:
   script:
     - set GDAL_DATA=%VCPKG_ROOT%\installed\x64-windows\share\gdal
     - set PROJ_LIB=%VCPKG_ROOT%\installed\x64-windows\share\proj4
+    - copy proj_4_9.dll proj.dll
     - "%CI_PROJECT_DIR%/build/build-x64-windows-release/bin/test_pdal_c"
   cache:
     key: build-x64-windows-release
@@ -90,6 +91,7 @@ test-x64-windows-debug:
   script:
     - set GDAL_DATA=%VCPKG_ROOT%\installed\x64-windows\share\gdal
     - set PROJ_LIB=%VCPKG_ROOT%\installed\x64-windows\share\proj4
+    - copy proj_4_9_d.dll proj.dll
     - "%CI_PROJECT_DIR%/build/build-x64-windows-debug/bin/test_pdal_cd"
   cache:
     key: build-x64-windows-debug
